# alphastell

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  makefile  openapi.json  pyproject.toml
.github/workflows/: claude.yml
examples/: 08_bspline.rs  08_bspline_with_waves.rs  chamber_direct.rs  mode_stats.rs  server_template.rs
frontend/: .gitignore  makefile  openapi.rs
frontend/app/: layout.tsx  page.tsx
frontend/client/: index.ts  sdk.gen.ts  types.gen.ts
notes/: 20260420-内側から外側までstepファイルを説明.md  20260422-s外挿スプラインの線形性.md  20260423-法線offset手法の厚み補正とparastell比較.md  20260426-bboxサブコマンド追加とSTEP単位cmmm問題.md  実装計画-vmec-chamber-step.md  戦略-液体金属流路OSS化とarxiv投稿.md
openapi/: main.tsp  makefile  package-lock.json  package.json
parastell/: .gitignore  Makefile
parastell/examples/: alphastell_fullcad_to_dagmc_example.py
src/: bbox.rs  coils.rs  compound.rs  cut.rs  generate.rs  lib.rs  magnet.rs  magnet2.rs  main.rs  openapi.rs  plasma.rs  server.rs  validate.rs  vessel.rs  vmec.rs
tools/: view_chamber.py  view_coils.py  view_points.py
