[package]
name = "alphastell"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Satoshi Misumi"]
description = "Rust CAD generator for stellarator fusion reactors: VMEC equilibria to STEP geometry for in-vessel layers and modular coils."
readme = "README.md"
license = "MIT"
repository = "https://github.com/lzpel/alphastell"
homepage = "https://github.com/lzpel/alphastell"
documentation = "https://docs.rs/alphastell"
keywords = ["stellarator", "fusion", "cad", "vmec", "nuclear"]
categories = ["science", "simulation", "command-line-utilities", "mathematics"]
exclude = [
	"/parastell",
	"/figure",
	"/notes",
	"/out",
	"/tools",
	"/examples",
	"/.github",
	"/.claude",
	"/.venv",
	"/pyproject.toml",
	"/uv.lock",
	"/makefile",
	"main.step",
	"main.svg",
]

[dependencies]
cadrum = "^0.7.3"
netcdf3 = "^0.6"
clap = { version = "^4", features = ["derive", "env"] }
regex = "^1"
# for server
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
axum = { version = "^0", features = ["multipart"] }
tokio = { version = "^1", features = ["rt", "rt-multi-thread", "macros", "signal", "net"] }
http = "^1"
